methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:9: error: type mismatch;
 found   : Unit
 required: Boolean
  for (banane <- 1 to 6) {
              ^