methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit = false
  for (compteur <- 1 to 6) {
    avance()
    if (estSurBiscuit()) {
      vuBiscuit = true
    }
  }
  for (banane <- 1 to 6) {
    recule()
  } 
}
